Quick fix for bug with Timestamp as key for direct access